--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <header>
         <nav class="navbar navbar-expand-lg bg-body-tertiary" style="background-color: rgb(124, 194, 254) !important;">
             <div class="container-fluid">
-                <a class="navbar-brand" href="/index.html">Mr.Greeter</a>
+                <a class="navbar-brand" href="index.html">Mr.Greeter</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
                     aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
